[package]
name = "pawn_hearts"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "5.0.2"
anyhow = "1.0.89"
meurglys3_lib = { git = "https://github.com/JakubCygaro/meurglys3.git", ver = "0.1.0" }
lazy_static = "1.5.0"
rand = "0.10.0-rc.5"
bytes = "1.9.0"

